[workspace]

members = [
    "tenkei90/problem1",
    "atcoder100/problem1",
    "atcoder100/problem2",
    "atcoder100/problem3",
    "atcoder100/problem4",
    "atcoder100/problem5",
    "atcoder100/problem6",
    "atcoder100/problem7",
    "atcoder100/problem8",
    "atcoder100/problem9",
    "atcoder100/problem10",
    "atcoder100/problem11",
    "atcoder100/problem12",
    "atcoder100/problem13",
    "atcoder100/problem14",
    "atcoder100/problem15",
    "atcoder100/problem16",
    "atcoder100/problem17",
    "atcoder100/problem18",
    "atcoder100/problem19",
    "atcoder100/problem20",
    "atcoder100/problem21",
    "atcoder100/problem22",
    "atcoder100/problem23",
    "atcoder100/problem24",
]
