[workspace]

members = [
    "test_other",
    "tenkei90/problem1",
    "atcoder100/problem1",
    "atcoder100/problem2",
    "atcoder100/problem3",
    "atcoder100/problem4",
    "atcoder100/problem5",
    "atcoder100/problem6",
    "atcoder100/problem7",
    "atcoder100/problem8",
    "atcoder100/problem9",
    "atcoder100/problem10",
    "atcoder100/problem11",
    "atcoder100/problem12",
    "atcoder100/problem13",
    "atcoder100/problem14",
    "atcoder100/problem15",
    "atcoder100/problem16",
    "atcoder100/problem17",
    "atcoder100/problem18",
    "atcoder100/problem19",
    "atcoder100/problem20",
    "atcoder100/problem21",
    "atcoder100/problem22",
    "atcoder100/problem23",
    "atcoder100/problem24",
    "atcoder100/problem25",
    "atcoder100/problem26",
    "atcoder100/problem27",
    "atcoder100/problem28",
    "atcoder100/problem29",
    "atcoder100/problem30",
    "atcoder100/problem31",
    "atcoder100/problem32",
    "atcoder100/problem33",
    "atcoder100/problem34",
    "atcoder100/problem35",
    "atcoder100/problem36",
    "atcoder100/problem37",
    "atcoder100/problem38",
    "atcoder100/problem39",
    "atcoder100/problem40",
    "atcoder100/problem41",
    "atcoder100/problem42",
    "atcoder100/problem43",
    "atcoder100/problem44",
    "atcoder100/problem45",
    "atcoder100/problem46",
    "atcoder100/problem47",
    "atcoder100/problem48",
    "atcoder100/problem49",
    "atcoder100/problem50",
]
